# modality-zephyr

./: .gitignore  CMakeLists.txt  Kconfig  Modality.toml  README.md  Readme.md  SUT.toml  go-modality.sh  prj.conf  west.yml
example-workspace/modality-example/: CMakeLists.txt  Modality.toml  SUT.toml  generated_component_definitions.h  prj.conf  sut-up.sh  west.yml
example-workspace/modality-example/modality-component/: Component.toml  events.csv  probes.csv
example-workspace/modality-example/src/: main.c
include/: modality_comms.h  modality_tracing.h
include/tracing/: tracing.h
modality-manifests/: Component.toml  events.csv  probes.csv
modality-manifests/mutators/: delay_mutator.toml
source/: modality_probe_trace.c
source/include/: modality_probe_events.h  modality_probe_macros.h  modality_probe_port.h  modality_probe_trace.h  modality_probe_zephyr.h  tracing_external.h
source/io/socket/: CMakeLists.txt  Kconfig  modality_probe_io.c
source/io/socket/include/: modality_probe_io.h
src/: main.c  modality_comms.c  modality_comms.h  modality_tracing.c
src/generated_mutators/: delay_mutator.c  delay_mutator.h
tools/: update-manifest.py
zephyr/: module.yml
