if(CONFIG_MODALITY_PROBE_TRACING)
  set(MODALITY_PROBE_TRACE_DIR ${ZEPHYR_CURRENT_MODULE_DIR})
  find_package(ModalityProbe REQUIRED)
  zephyr_library()
  zephyr_include_directories(${MODALITY_PROBE_TRACE_DIR}/source/include)
  zephyr_library_sources(${MODALITY_PROBE_TRACE_DIR}/source/modality_probe_trace.c)
  add_subdirectory_ifdef(CONFIG_MODALITY_PROBE_IO_TRANSPORT_SOCKET ${MODALITY_PROBE_TRACE_DIR}/source/io/socket)
  zephyr_library_link_libraries(ModalityProbe::LibModalityProbe)
  zephyr_include_directories(${MODALITY_PROBE_INCLUDE_DIRS})
endif()
